фикс authMeDto
